--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     </main>
     <footer class="footer__container">
-      <button class="button">Aperte Aqui</button>
+      <button class="button">Aperte Aqui!</button>
     </footer>
     <script src="./Script/index.js"></script>
   </body>
