--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           dificil para eu me espressar pois você mesmo me conhece.
         </p>
         <p>
-          Mas por meio desse site, onde eu imaginei meio diferente de te dizer o
+          Mas por meio desse site, onde eu imaginei meios diferente de te dizer o
           quanto eu te amo.
         </p>
       </article>
